--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Data Analysis<br />
+						<h1>Data Science<br />
 						Portfolio</h1>
 						<h2> With SQL and Python Programming Language </h2>
 						<p>Created by Muchammad Malik</p>
